--- a/package.json
+++ b/package.json
@@ -31,20 +31,18 @@
     "chart.js": "^4.4.2",
     "chartist": "^0.10.1",
     "chroma-js": "^2.4.2",
-    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
-    "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "face-api.js": "^0.22.2",
+    "firebase": "^12.0.0",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
-    "material-ui": "^1.0.0-beta.46",
-    "material-ui-icons": "^1.0.0-beta.36",
+
     "mdb-react-ui-kit": "^7.2.0",
     "npm-run-all": "^4.1.5",
-    "path": "^0.12.7",
+
     "perfect-scrollbar": "^1.5.5",
-    "powerbi-client-react": "^1.4.0",
+
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
@@ -70,8 +68,6 @@
     "socket.io-client": "^4.7.5",
     "stylis": "^4.3.1",
     "stylis-plugin-rtl": "^2.1.1",
-    "tableau-api": "^2.2.3",
-    "tableau-react": "^2.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
