--- a/server/package.json
+++ b/server/package.json
@@ -4,30 +4,24 @@
   "description": "Secure server for Online Voting System with biometric verification and fraud detection",
   "main": "server.js",
   "scripts": {
-    "start": "node simple-server.js",
+    "start": "node server.js",
     "dev": "nodemon simple-server.js",
     "secure": "node secure-server.js",
     "secure-dev": "nodemon secure-server.js",
     "mock": "node mockServer.js",
     "mock-dev": "nodemon mockServer.js",
-    "seed": "node seed.js",
     "check": "node checkServer.js",
     "init-uploads": "node initUploads.js",
-    "setup": "npm run init-uploads && npm run seed",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0",
+    "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
-
     "winston": "^3.10.0"
   },
   "devDependencies": {
